commit from githubdesktop

--- a/tex/chap1intro.tex
+++ b/tex/chap1intro.tex
@@ -9,6 +9,7 @@
 %\bibliographystyle{sjtu2}%[此处用于每章都生产参考文献]
 \chapter{绪论}
 \label{chap:introduction}
+
 \section{人体肠道菌群及其早期定植特点}
 肠道菌群是指定植于人或其他动物消化道内的微生物群落，人体肠道也是体内最大的免疫器官。作为人体本身和外部环境的主要界面，肠道必须保护其免收有害抗原（如毒素和病原体）的侵害，同时容纳和耐受对自身健康有益的共生细菌——这是一项艰巨的任务，因为细菌病原体和共生菌之间平衡的改变将肠道从健康的肠内稳态（intestinal homeostasis）\cite{collier2005innate}转变为不受控制的炎症状态，这可能导致肠道本身的损伤，也可能干扰其他系统的正常生理功能，从而与多种疾病的发生发展息息相关，包括炎症性肠病（Inflammatory Bowel Disease，IBD）\cite{ni2017gut}，II型糖尿病\cite{harsch2018role}，自闭症\cite{de2014altered, de2013fecal}等疾病。共生细菌为人类宿主的健康提供诸多保障，包括维持肠内稳态\cite{hooper2001commensal}，保护其免受外界伤害\cite{rakoff2004recognition}，维护和支持消化功能\cite{guarner2006mechanisms}，调节肠道免疫功能\cite{round2009gut,abreu2010toll}等。
 
@@ -21,7 +22,7 @@
 在临床实践中，常见的儿科肠道炎症性疾病包括但不限于坏死性小肠结肠炎（Necrotizing Enterocolitis，NEC）、先天性巨结肠相关性小肠结肠炎（Hirchsprung-Associated Enterocolitis ）和炎症性肠病（Inflammatory Bowel Disease，IBD）；炎症性肠病又包括克罗恩病（Crohn’s Disease，CD）和溃疡性结肠炎（Ulcerative Colitis，UC）。这些疾病严重影响患儿肠道功能，进而严重影响患儿后续生活质量，甚者可危及生命。目前，NEC、HAEC、IBD的发病机制均未明确；既往研究表明，肠道菌群紊乱与上述疾病的发病关系密切。
 
 \subsection{坏死性小肠结肠炎与肠道菌群紊乱}
-坏死性小肠结肠炎（NEC）是新生儿最常见的胃肠道急症之一。它是一种以小肠黏膜缺血性坏死为特征的疾病，与重度炎症、肠道产气菌侵袭、产气侵入肠道壁和门静脉系统相关\cite{neu2011necrotizing}。大多数坏死性小肠结肠炎患儿在发病前健康状况、生长情况和喂养情况均良好\cite{hallstrom2006laboratory}。早期最常见症状表现为喂养耐受性突然变化。腹部体征包括腹胀、腹部压痛、喂养残留、呕吐（通常为胆汁）、腹泻、血便、肠内喂养管可见胆汁\cite{walsh1988necrotizing, yu1980improving}。其他非特异体征包括腹壁红斑、痉挛和硬结。非特异性系统性发现包括呼吸暂停、呼吸衰竭，嗜睡，体温不稳定。更严重者可发生由感染性休克引起的低血压，20\%的NEC患儿被诊断有并发的菌血症\cite{kliegman1984necrotizing}。
+坏死性小肠结肠炎（NEC）是新生儿最常见的胃肠道急症之一。它是一种以小肠黏膜缺血性坏死为特征的疾病，与重度炎症、肠道产气菌侵袭、产气侵入肠道壁和门静脉系统相关\cite{neu2011necrotizing}。大多数坏死性小肠结肠炎患儿在发病前健康状况、生长情况和喂养情况均良好\cite{hallstrom2006laboratory}。早期最常见症状表现为喂养耐受性突然变化。腹部体征包括腹胀、腹部压痛、喂养残留、呕吐（通常为胆汁）、腹泻、血便、肠内喂养管可见胆汁\cite{walsh1988necrotizing, yu1980improving}。其他非特异体征包括腹壁红斑、痉挛和硬结。非特异性系统性发现包括呼吸暂停、呼吸衰竭，嗜睡，体温不稳定。更严重者可发生由感染性休克引起的低血压，20\%的NEC患儿被诊断有并发的菌血症\cite{kliegman1984necrotizing}，严重者可致死。
 
 因已发表研究的诊断和数据收集不一致，故其发病率尚未明确\cite{zani2015scavenger}。在不同地区间的发病率无明显差异：美国一项研究统计表明：在过去25年内NEC的发病率稳定在0.3-2.4例/1000新生儿，且常见于胎龄最小的早产儿中\cite{pickard2009short}；来自其他国家（包括加拿大、日本等）的统计研究也得出了类似的发病率结论\cite{kawase2006gastrointestinal}。然而，新生儿胎龄对NEC发病的影响较大——NEC在早产儿中发病率更高，且与出生体重和孕龄呈负相关：出生体重低于1000g的新生儿发病率最高（尽管不同研究显示发病率在4\%~50\%或更高）；出生体重介于1501-2000g的新生儿，其NEC发病率急剧下降到3.8个/1000活产新生儿\cite{stoll2015trends}。同样对于胎龄为35-36周的新生儿，其发病率也骤减。尽管总体上存在差异，但来自世界各地的研究数据始终表明，随着胎龄和孕周的降低，NEC发病率增加\cite{backhed2005host,rees2010national,yee2012incidence}。
 
@@ -40,7 +41,7 @@
 
 近30年来许多临床和动物研究致力于发现HAEC特定的致病菌，尽管有一些致病菌被认为可能与HAEC发病有关，如艰难梭状芽孢杆菌\cite{thomas1982association}，大肠杆菌\cite{thomas1986enterocolitis},轮状病毒\cite{wilson1990microbiological}等，但迄今为止，尚无明确结论，主要原因是受限于依赖细胞培养的技术，以及肠道菌群的复杂性。由于肠道菌群数量庞大，种类繁多，有85\%的肠道细菌无法由培养得到。有学者利用扩增rDNA限制性片段分析技术对一例反复发作HAEC的3岁患儿进行了纵向系列粪便（共15次）检测，发现HAEC发作与特定肠道菌群分布模式有关，并受到应用抗生素的影响\cite{de2010genomics}。
 
-目前国际上应用宏基因组学技术研究HAEC肠道菌群的工作才刚刚起步。经文献检索，相关发表文章共4篇，其中2篇是本课题组的临床前期研究\cite{yan2014characterization,li2016characterization}。我们在手术中提取HAEC和HD患儿不同肠道部位的粪便标本，比较其肠道菌群特点。研究中最大的发现是，HAEC和HD患儿肠道菌群种类存在明显差异，而远端无神经节细胞肠道和近端有神经节细胞肠道内样本的肠道菌群种类并无明显差别。这表明，有无神经节细胞并不是影响肠道菌群组成的主要决定因素；而有无特定肠道菌群的定植可能是影响HAEC产生和发展的重要原因。同时，我们也发现，肠道菌群分布也跟患儿的年龄是有一定关系的，不同年龄阶段的患儿肠道微生物菌群差异明显。说明肠道菌群随着患儿年龄的改变有所不同，这也符合从新生儿出生时消化道的无菌状态到2岁时接近成人的总体变化规律。我们进一步研究发现，曾经罹患HAEC患儿在症状缓解期肠道菌群构成依然与发病时的HAEC患儿相似，提示导致HAEC发病的特定肠道菌群分布模式可能持续存在，这也可能是HAEC复发率高达50\%的原因\cite{li2016characterization}。
+目前国内外应用宏基因组学测序和分析技术研究肠道菌群在HAEC中的作用的研究较少，检索得相关发表文章共4篇，其中2篇是本课题组的临床前期研究\cite{yan2014characterization,li2016characterization}。我们在手术中提取HAEC和HD患儿不同肠道部位的粪便标本，比较其肠道菌群特点。研究中最大的发现是，HAEC和HD患儿肠道菌群种类存在明显差异，而远端无神经节细胞肠道和近端有神经节细胞肠道内样本的肠道菌群种类并无明显差别。这表明，有无神经节细胞并不是影响肠道菌群组成的主要决定因素；而有无特定肠道菌群的定植可能是影响HAEC产生和发展的重要原因。同时，我们也发现，肠道菌群分布也跟患儿的年龄是有一定关系的，不同年龄阶段的患儿肠道微生物菌群差异明显。说明肠道菌群随着患儿年龄的改变有所不同，这也符合从新生儿出生时消化道的无菌状态到2岁时接近成人的总体变化规律。我们进一步研究发现，曾经罹患HAEC患儿在症状缓解期肠道菌群构成依然与发病时的HAEC患儿相似，提示导致HAEC发病的特定肠道菌群分布模式可能持续存在，这也可能是HAEC复发率高达50\%的原因\cite{li2016characterization}。
 
 \subsection{炎症性肠病与肠道菌群紊乱}
 尽管儿科IBD的发病机制和诊断程序与成人IBD相似，但是前者的疾病程度较严重，病情进展较快，易发生并发症，易存在生长迟缓，营养不良等。其病因及发病机制尚不完全明确，目前认为遗传易感性、肠道菌群紊乱以及免疫应答异常对于IBD发病起到贡献作用\cite{liang2014role}。
