--- a/tex/id.tex
+++ b/tex/id.tex
@@ -2,7 +2,7 @@
 % !TEX program = xelatex
 % !TEX root = ../thesis.tex
 % !TEX encoding = UTF-8 Unicode
-\title{儿科炎症性肠病与肠道菌群相关性研究}
+\title{儿科肠道炎症性疾病与肠道菌群相关性研究}
 \author{刘\quad{}嘉\quad{}奕}
 \advisor{洪莉教授}
 % \coadvisor{某某教授}
