--- a/tex/pub.tex
+++ b/tex/pub.tex
@@ -8,6 +8,6 @@
 %%==================================================
 
 \begin{publications}{99}
-    \item\textsc{Chen H, Chan C~T}. {Acoustic cloaking in three dimensions using acoustic metamaterials}[J]. Applied Physics Letters, 2007, 91:183518.
-    \item\textsc{Chen H, Wu B~I, Zhang B}, et al. {Electromagnetic Wave Interactions with a Metamaterial Cloak}[J]. Physical Review Letters, 2007, 99(6):63903.
+    \item\textsc{刘嘉奕，洪莉\textsuperscript{*}}. {人体肠道菌群研究中粪便样品取样与保存方法}[J]. 国际儿科学杂志, 2018（已录用）.
+    \item\textsc{JIAYI LIU, JIANHUA SUN, YUQING LI}, et al. {Patterned progression of gut microbiota predisposes preterm infants to necrotizing enterocolitis and late-onset sepsis}[J]. PeerJ, 2018(In revision).
 \end{publications}
