--- a/tex/ack.tex
+++ b/tex/ack.tex
@@ -11,13 +11,13 @@
 
   三谢友人，山河不足重，重在遇知己。遥谢挚友程瑶，高山流水，幸得此知音，虽行路艰难，歧路常遇，有朝一日必云帆直挂，乘风破浪，横渡沧海。感谢挚友张菁、周琳，相知无远近，万里尚为邻，喜怒哀乐，与汝共享，风风雨雨，与尔共历，千言万语，只求君好。感恩师姐杜丽娟、李玉青、谢丽清、室友李亚璇、吴蕊池、马希瑞，师妹张卉、朱媛、韩茜，何缘幸相识，承君呵护重。
 
-  四谢同仁，响必应之与同声，道固从之与同类。感恩City of Hope National Medical Center各位无私帮助：Dr. Ravi Salgia, Dr. Edward Wenge Wang, Prakash Kulkarni, Chong Kai Wang, Bolot Mambetsariev, Tamara Mirzapoiazova, Ekaterina Semenyuk, Atish Mohanty, Arjun Kalvala, Arin Nam, Anusha Nathan, 梁睿，齐秀英，郑桐森，王广雨，张元新，赵玲，孙婷…………与尔共事，神怿气愉。
+  四谢同仁，响必应之与同声，道固从之与同类。感恩City of Hope National Medical Center各位无私帮助：Dr. Ravi Salgia, Dr. Edward Wenge Wang, Prakash Kulkarni, Chong Kai Wang, Bolot Mambetsariev, Tamara Mirzapoiazova, Ekaterina Semenyuk, Atish Mohanty, Arjun Kalvala, Arin Nam, Anusha Nathan, Keqiang Zhang, Wendong Li, 梁睿，齐秀英，郑桐森，王广雨，张元新，赵玲，孙婷…………与尔共事，神怿气愉。
 
-  And special gratitude to Ka Ming Pang –  \textbf{you taught me all the precious things}.
+  And special gratitude to Ka Ming Pang——\textbf{you taught me all the precious things}.
 
   五谢光阴，逝者如斯，不舍昼夜，冲淡一切欢愉与苦难，带来所有宽慰与光明。
 
   往者不可谏，来者犹可追，只愿不忘初心——路漫漫其修远兮，吾将上下而求索！\\
   基金资助：本课题承蒙国家自然科学基金（No.81771630）资助，特致谢意！\\
-  技术支持：感谢所有开发、移植、维护和测试上海交通大学 \LaTeX 毕业论文模板的同学们！\\
+  技术支持：感谢开发、移植、维护和测试上海交通大学 \LaTeX 毕业论文模板之诸君！\\
 \end{thanks}
