--- a/tex/app_archive.tex
+++ b/tex/app_archive.tex
@@ -3,13 +3,16 @@
 % !TEX root = ../thesis.tex
 % !TEX encoding = UTF-8 Unicode
 \chapter{原始数据与源代码存档}
+\label{app:archive}
 
-\section{原始测序数据存档}
-\textbf{坏死性小肠结肠炎（NEC）肠道菌群MiSeq测序原始数据}
-\textbf{儿科炎症性肠病肠道菌群MiSeq测序原始数据}
+\section{原始测序数据}
+\subsection{坏死性小肠结肠炎（NEC）肠道菌群MiSeq测序原始数据}
+\href{github.com/jiayiliujiayi/masterthesis/fasta}{github.com/jiayiliujiayi/masterthesis/fasta}
+\subsection{儿科炎症性肠病肠道菌群MiSeq测序原始数据}
+\href{github.com/jiayiliujiayi/masterthesis/fasta/comparison}{github.com/jiayiliujiayi/masterthesis/fasta/comparison}
 
-\section{论文相关源代码和原始图标存档}
-\textbf{源代码\footnote{本论文使用 \LaTeX 编译生成}}
-尝试引用\cite{collier2005innate}
-
-\textbf{原始图片和表格}
+\section{论文源代码和原始图片}
+\subsubsection{源代码\protect\footnote{本论文使用 \LaTeX 编译生成}}
+\href{github.com/jiayiliujiayi/masterthesis/tex}{github.com/jiayiliujiayi/masterthesis/tex}
+\subsection{原始图片}
+\href{github.com/jiayiliujiayi/masterthesis/figure}{github.com/jiayiliujiayi/masterthesis/figure}
