--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -257,14 +257,14 @@
   住院前和住院期间所有患者均未接受接受益生菌处方。
 
   \subsection{样本及测序信息}
-  入选NEC患儿4例，LOS患儿3例， 对照组患儿17例。采集其纵向粪便标本，共192个，其中NEC标本47个，LOS标本44个，对照组标本101个。其他临床资料见表表\ref{tab:necdemographic}。 
+  入选NEC患儿4例，LOS患儿3例， 对照组患儿17例。采集其纵向粪便标本，共192个，其中NEC标本47个，LOS标本44个，对照组标本101个。其他临床资料见表表\ref{tab:necdemographic}。
 
   使用Illumina MiSeq高通量测序平台共测得 条16s rRNA基因序列，优化序列数目为7,472,400，优化碱基数目为3348,030,799，优化平均序列长度为448bp。
 
   \subsection{多样性分析}
     \subsubsection{$\alpha$多样性分析}
       \paragraph{NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性分析}
-      基于OTU进行计算，NEC,LOS和对照组Shannon-Wienner指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.57，p = 0.16），LOS组和对照组之间存在统计学差异（p = 0.0175）\。NEC,LOS和对照组Simpson指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.57，p = 0.16），LOS组和对照组之间存在统计学差异（p = 0.0175）。
+      基于OTU进行计算，NEC,LOS和对照组Shannon-Wienner指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.57，p = 0.16），LOS组和对照组之间存在统计学差异（p = 0.0175）。NEC,LOS和对照组Simpson指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.57，p = 0.16），LOS组和对照组之间存在统计学差异（p = 0.0175）。
 
 
 
