commit from github desktop
试了试加入图片～

--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -7,25 +7,38 @@
 %%==================================================
 
 \begin{abstract}
-\textbf{第一部分\qquad 肠道菌群纵向定植模式与早产儿坏死性小肠结肠炎相关性研究}\\
-\begin{description}
-    \item[目的] 详细内容
-    \item[方法] 详细内容
-    \item[结果] 详细内容
-    \item[结论] 详细内容 \ldots
-\end{description}
+%  \renewcommand\thesection{\arabic{section}} %编号改成阿拉伯数字
+  \section{肠道菌群纵向模式与早产儿坏死性小肠结肠炎研究}
+    \begin{description}
+      \item[目的] 详细内容
+      \item[方法] 详细内容
+      \item[结果] 详细内容
+      \item[结论] 详细内容 \ldots
+    \end{description}
 
-\textbf{第二部分\qquad 儿科炎症性肠病与肠道菌群相关性研究}\\
-\begin{description}
-    \item[目的] 详细内容
-    \item[方法] 详细内容
-    \item[结果] 详细内容
-    \item[结论] 详细内容 \ldots
-\end{description}
-
+  \section{儿科炎症性疾病与肠道菌群紊乱}
+    \begin{description}
+      \item[目的] 详细内容
+      \item[方法] 详细内容
+      \item[结果] 详细内容
+      \item[结论] 详细内容 \ldots
+    \end{description}
 \end{abstract}
 
 \begin{englishabstract}
+  \section{Patterened Intestinal Microbiota in Necrotizing Enterocolitis}
+    \begin{description}
+      \item[AIM] 详细内容
+      \item[METHODS] 详细内容
+      \item[RESULTS] 详细内容
+      \item[CONCLUSIONS] 详细内容 \ldots
+    \end{description}
 
-
+  \section{Pediatric Enterocolitis in Association with Intestinal Microbiota}
+    \begin{description}
+      \item[AIM] 详细内容
+      \item[METHODS] 详细内容
+      \item[RESULTS] 详细内容
+      \item[CONCLUSIONS] 详细内容 \ldots
+    \end{description}
 \end{englishabstract}
