--- a/tex/app_archive.tex
+++ b/tex/app_archive.tex
@@ -6,13 +6,13 @@
 \label{app:archive}
 
 \section{原始测序数据}
-\subsection{坏死性小肠结肠炎（NEC）肠道菌群MiSeq测序原始数据}
-\href{github.com/jiayiliujiayi/masterthesis/fasta}{github.com/jiayiliujiayi/masterthesis/fasta}
-\subsection{儿科炎症性肠病肠道菌群MiSeq测序原始数据}
-\href{github.com/jiayiliujiayi/masterthesis/fasta/comparison}{github.com/jiayiliujiayi/masterthesis/fasta/comparison}
+  \subsection{坏死性小肠结肠炎（NEC）肠道菌群MiSeq测序原始数据}
+  为每个样本生成单独的FASTQ文件，存档至BioProject登记号为\href{https://www.ncbi.nlm.nih.gov/bioproject/PRJNA470548}{No.PRJNA470548}的序列读取归档NCBI中。
+  \subsection{儿科炎症性肠病肠道菌群MiSeq测序原始数据}
+  \href{github.com/jiayiliujiayi/masterthesis/fasta/comparison}{github.com/jiayiliujiayi/masterthesis/fasta/comparison}
 
 \section{论文源代码和原始图片}
-\subsubsection{源代码\protect\footnote{本论文使用 \LaTeX 编译生成}}
-\href{github.com/jiayiliujiayi/masterthesis/tex}{github.com/jiayiliujiayi/masterthesis/tex}
-\subsection{原始图片}
-\href{github.com/jiayiliujiayi/masterthesis/figure}{github.com/jiayiliujiayi/masterthesis/figure}
+  \subsubsection{源代码\protect\footnote{本论文使用 \LaTeX 编译生成}}
+  \href{github.com/jiayiliujiayi/masterthesis/tex}{github.com/jiayiliujiayi/masterthesis/tex}
+  \subsection{原始图片}
+  \href{github.com/jiayiliujiayi/masterthesis/figure}{github.com/jiayiliujiayi/masterthesis/figure}
