--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -264,7 +264,24 @@
   \subsection{多样性分析}
     \subsubsection{$\alpha$多样性分析}
       \paragraph{NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性分析}
-      基于OTU进行计算，NEC,LOS和对照组Shannon-Wienner指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.57，p = 0.16），LOS组和对照组之间存在统计学差异（p = 0.0175）。NEC,LOS和对照组Simpson指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.57，p = 0.16），LOS组和对照组之间存在统计学差异（p = 0.0175）。
+      基于OTU进行计算，NEC,LOS和对照组Shannon-Wienner指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.47，p = 0.06），LOS组和对照组之间存在统计学差异（p = 0.01）\ref{fig:2alphadiversity:shannon}。NEC,LOS和对照组Simpson指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组Simpson指数无统计学差异（p = 0.77）、NEC组和对照组存在统计学差异（p = 0.03），LOS组和对照组之间存在统计学差异（p = 0.02）\ref{fig:2alphadiversity:simpson}。
+
+      \begin{figure}[!htp]
+        \centering
+        \begin{minipage}[b]{0.6\textwidth} %标题宽度
+          \centering
+          \subcaptionbox{Shannon指数\label{fig:2alphadiversity:shannon}}
+            {\includegraphics[height=5.5cm]{figure/2shannon.png}}
+            \hspace{4em}
+          \subcaptionbox{Simpson指数\label{fig:2alphadiversity:simpson}}
+            {\includegraphics[height=5.5cm]{figure/2simpson.png}}
+        \bicaption{通过计算Shannon指数(a)和Simpson(b)指数对NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性分析}{Exploring $\alpha$ diversity by calculation Shannon diversity index(a) and Simpson diversity index(b) among preterm infants with NEC, LOS and Control groups.}
+        \label{fig:2alphadiversity}
+        \end{minipage}
+      \end{figure}
+      \subsection{$\beta$多样性分析}
+
+
 
 
 
