第二章结果差不多了
sigh 逝者已走 在者节哀

--- a/bib/chap2.bib
+++ b/bib/chap2.bib
@@ -50,3 +50,14 @@
   year={2013},
   publisher={Public Library of Science}
 }
+
+@article{moles2013bacterial,
+  title={Bacterial diversity in meconium of preterm neonates and evolution of their fecal microbiota during the first month of life},
+  author={Moles, Laura and Gomez, Marta and Heilig, Hans and Bustos, Gerardo and Fuentes, Susana and de Vos, Willem and Fern{\'a}ndez, Le{\'o}nides and Rodr{\'\i}guez, Juan M and Jim{\'e}nez, Esther},
+  journal={PloS one},
+  volume={8},
+  number={6},
+  pages={e66986},
+  year={2013},
+  publisher={Public Library of Science}
+}
