--- a/tex/chap2nec.tex
+++ b/tex/chap2nec.tex
@@ -205,7 +205,7 @@
 
     $/beta$多样性指数该指数用来表示生物种类对于群落异质性的反映：不仅描述群落内不生物种类的数量，也考虑它们的相似性及其彼此之间的位置。通常$/beta$多样性表示为群落相似性指数或是同一分组内不同样本中生物物种的周转率。不同分组间生物种类的相似性越差，$/beta$生物多样性越高。
 
-    本课题计算unweighed UniFrac distance, weighed UniFrac distance和Bray-Curtis dissimilarity来进行$/beta$多样性分析，其中weighed UniFrac distance将各物种丰度纳入考虑，而unweighed未对物种丰都进行加权处理。基于$/beta$多样性进行PCoA作图使用上述距离文件进行PCOA和PCA作图，每个代表一个样品菌群整体（即群落），而点与和之间的距离代表两个菌群整体（群落）间的序列相似度。
+    本课题计算unweighed UniFrac distance, weighed UniFrac distance和Bray-Curtis dissimilarity来进行$/beta$多样性分析，其中weighed UniFrac distance将各物种丰度纳入考虑，而unweighed未对物种丰都进行加权处理。基于$/beta$多样性进行PCoA作图使用上述距离文件进行PCoA和PCA作图，每个代表一个样品菌群整体（即群落），而点与和之间的距离代表两个菌群整体（群落）间的序列相似度。
 
     PCA（Principal Components Analysis）即主成分分析，也称主分量分析或主成分回归分析法，首先利用线性变换，将数据变换到一个新的坐标系统中；然后再利用降维的思想，使任何数据投影的最大方差在第一个坐标（称为第一主成分）上，第二大方差在第二个坐标（第二主成分）上。这种降维的思想首先减少数据集的维数，同时还保持数据集的对方差贡献最大的特征，最终使数据直观呈现在二维坐标系。
 
@@ -227,6 +227,12 @@
   本研究最终选择24个充分采样的早产儿，包括4名坏死性小肠结肠炎（NEC）患儿（2个IIA期和2个IIB期），3个迟发型败血症LOS和17个匹配对照（表S1）；共收集192个样本，其中NEC标本47个，LOS标本44个，对照组标本101个，并进行16s rRNA 基因测序。
 
   本研究中， 所有早产儿的平均胎龄为30.5周（28至33周），平均出生体重为1440克（945克至1950克）。 NEC组有3名女婴和1名男婴，LOS组有2名女婴和1名男婴，对照组有9名女婴和8名男婴。所有患儿均通过剖宫产分娩，并以早产儿配方奶喂养。 NEC的平均发病时间为出生后16天（范围：11至19天），确诊为LOS的平均生命日为12天。三组的人口统计学比较（表\ref{tab:necdemographic}）显示，在胎龄，出生体重和性别百分比方面未见显著差异。
+
+  一旦怀疑发生NEC，患儿会立即得到支持性护理和抗生素治疗——支持性护理包括停止肠内喂养、肠道休息，开始全肠外营养（TPN），补液，纠正代谢性酸中毒，肠道休息。在上海儿童医学中心新生儿重症监护病房，用于预防早产儿出生后败血症的抗生素组合为哌拉西林 - 他唑巴坦，头孢噻肟和甲硝唑。分别在治疗28天和15天后，两名NEC患儿情况好转并重新开始肠内喂养。一名婴儿在家人同意终止治疗并拒绝手术干预后死亡（表S1）。
+
+  根据细菌血培养的阳性结果，来自LOS组的一名患儿被诊断出患有肺炎克雷伯菌菌血症，并且给予美罗培南21天；第二名患儿被诊断患有肺炎克雷伯氏菌和铜绿假单胞菌菌血症并给予美罗培南38天。第三名患儿被诊断为肺炎克雷伯菌菌血症、重症肺炎且对头孢噻肟耐药，因此给予美罗培南13天。
+
+  住院前和住院期间所有患者均未接受接受益生菌处方。
 
   \begin{table}[!hpb]
     \centering
@@ -250,14 +256,8 @@
   \footnotetext[1]{NEC、LOS和对照组在入院时，胎龄、出生体重、年龄和性别无统计学差异。三组住院时常具有显著性差异（p = 0.046），这符合我们的预期，因为NEC和LOS患儿往往需要更长时间恢复，因此住院时间相对更长；比较NEC和LOS组住院时长未见明显统计学差异。胎龄=平均值（下限-下限），出生体重=平均值（95\%置信区间），诊断时年龄=平均值（下限-下限），性别=人数（占本组的百分比），住院时长=平均值（95\%置信区间）
   }
 
-  一旦怀疑发生NEC，患儿会立即得到支持性护理和抗生素治疗——支持性护理包括停止肠内喂养、肠道休息，开始全肠外营养（TPN），补液，纠正代谢性酸中毒，肠道休息。在上海儿童医学中心新生儿重症监护病房，用于预防早产儿出生后败血症的抗生素组合为哌拉西林 - 他唑巴坦，头孢噻肟和甲硝唑。分别在治疗28天和15天后，两名NEC患儿情况好转并重新开始肠内喂养。一名婴儿在家人同意终止治疗并拒绝手术干预后死亡（表S1）。
-
-  根据细菌血培养的阳性结果，来自LOS组的一名患儿被诊断出患有肺炎克雷伯菌菌血症，并且给予美罗培南21天；第二名患儿被诊断患有肺炎克雷伯氏菌和铜绿假单胞菌菌血症并给予美罗培南38天。第三名患儿被诊断为肺炎克雷伯菌菌血症、重症肺炎且对头孢噻肟耐药，因此给予美罗培南13天。
-
-  住院前和住院期间所有患者均未接受接受益生菌处方。
-
   \subsection{样本及测序信息}
-  入选NEC患儿4例，LOS患儿3例， 对照组患儿17例。采集其纵向粪便标本，共192个，其中NEC标本47个，LOS标本44个，对照组标本101个。其他临床资料见表表\ref{tab:necdemographic}。
+  入选NEC患儿4例，LOS患儿3例， 对照组患儿17例。采集其纵向粪便标本，共192个，其中NEC标本47个，LOS标本44个，对照组标本101个。其他临床资料见表\ref{tab:necdemographic}。
 
   使用Illumina MiSeq高通量测序平台共测得 条16s rRNA基因序列，优化序列数目为7,472,400，优化碱基数目为3348,030,799，优化平均序列长度为448bp。
   \subsection{分类学分析}
@@ -272,7 +272,7 @@
     \subsubsection{NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性分析}
 %      \paragraph{NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性分析}
       基于OTU进行计算，NEC,LOS和对照组Shannon-Wienner指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组、NEC组和对照组shannon指数无统计学差异（分别p = 0.47，p = 0.06），LOS组和对照组之间存在统计学差异（p = 0.01）\ref{fig:2alphadiversity:shannon}。NEC,LOS和对照组Simpson指数分别为：1.32，1.16和1.66；三组两两比较，可知LOS组和NEC组Simpson指数无统计学差异（p = 0.77）、NEC组和对照组存在统计学差异（p = 0.03），LOS组和对照组之间存在统计学差异（p = 0.02）\ref{fig:2alphadiversity:simpson}。
-
+      %alpha多样性图
       \begin{figure}[!htp]
         \centering
         \begin{minipage}[b]{0.6\textwidth} %标题宽度
@@ -282,13 +282,44 @@
             \hspace{4em}
           \subcaptionbox{Simpson指数\label{fig:2alphadiversity:simpson}}
             {\includegraphics[height=5.5cm]{figure/2simpson.png}}
-        \bicaption{通过计算Shannon指数(a)和Simpson(b)指数对NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性分析}{Exploring $\alpha$ diversity by calculation Shannon diversity index(a) and Simpson diversity index(b) among preterm infants with NEC, LOS and Control groups.}
+        \bicaption[NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性比较]{通过计算Shannon指数(a)和Simpson(b)指数对NEC,LOS和对照组患儿件肠道菌群$\alpha$多样性分析}{Exploring $\alpha$ diversity by calculation Shannon diversity index(a) and Simpson diversity index(b) among preterm infants with NEC, LOS and Control groups.}
         \label{fig:2alphadiversity}
         \end{minipage}
       \end{figure}
       \subsection{$\beta$多样性分析}
     \subsubsection{基于$\beta$多样性，分析菌群纵向定植模式}
-    
+      使用基于weighed unifrac距离的主坐标(PCoA)进行分析发现，NEC、LOS和对照组出生后肠道菌群定植以周为单位进行变化（图\ref{fig:2ingroupweek}，(A)PC1 = 69.92\%, PC2 = 15.43\%, ANOSIM r = 0.40, p = 0.001, (B)PC1 = 78.07\%, PC2 = 8.06\%, ANOSIM r = 0.36, p = 0.001, (C)PC1 = 66.59\%, PC2 = 13.18\%, ANOSIM r = 0.40, p = 0.001 ），这与以往研究的结果一致\cite{moles2013bacterial}。
+        %分组，按照周来比较pcoa图
+          \begin{figure}[!htp]
+            \centering
+            \includegraphics[width=15cm]{2ingroupweek.eps}
+            \bicaption[NEC,LOS和对照组组内患儿出生后肠道菌群定植模式变化]
+              {使用weighed unifrac距离对出生后肠道菌群定植进行PCoA分析}
+              {Post-partum Colonization Pattern by PCoA of Weighed Unifrac Distances}
+            \label{fig:2ingroupweek}
+          \end{figure}
+
+      三组组间比较以及任意两组比较结果表明，在出生后14天内和21天后，其微生物群定植无明显差异图\ref{fig:2inweekgroup}(A, B, D, E)，ANOSIM (A) r = 0.02, p = 0.797, (B) r = 0.12, p = 0.079, (D) r = 0.21, p = 0.087, (E) r = 0.11, p = 0.183）；出生后14到21天即生后第三周，PC1和PC2分别占组间差异的78.18\%和9.29\%（图\ref{fig:2inweekgroup}(C)，ANOSIM r = 0.32, p = 0.001），提示菌群模式与NEC发病的可能关联。此外，NEC和对照组的对比显示出生后21到28天即出生后第四周的显著差异（图\ref{fig:necvscontrol}, ANOSIM r = 0.27, p = 0.030）；这表明在NEC病程中存在这菌群的持续失调，尽管在出生后28天后，两组间的差异不显著（ANOSIM r = 0.27, p = 0.052）。
+        %分周，按照组来比较pcoa图
+          \begin{figure}[!htp]
+            \centering
+            \includegraphics[width=16cm]{2inweekgroup.eps}
+            \bicaption[按照日龄对NEC,LOS和对照组患儿间肠道菌群模式分析]
+              {使用weighed unifrac距离对三组患儿间肠道菌群模式进行PCoA分析。三组患儿在出生后0到7天菌群分布相似。但在出生后14天开始，菌群模式出现显著差异，而此时也是NEC常见的发病时间。}
+              {The PCoA of Microbiota Colonization Analysis on a Weekly Basis after Birth. The}
+            \label{fig:2inweekgroup}
+          \end{figure}
+        %NEC和对照组单独比较
+          \begin{figure}[!htp]
+            \centering
+            \includegraphics[width=16cm]{necvscontrol.eps}
+            \bicaption[NEC和对照组患儿肠道菌群模式比较]
+              {使用weighed unifrac距离对NEC和对照组患儿肠道菌群模式进行PCoA分析。}
+              {The PCoA of Microbiota Colonization Analysis between NEC and Control groups.}
+            \label{fig:necvscontrol}
+          \end{figure}
+
+      另外，为排除组内个体间差异对于分析结果的潜在影响，本研究对于每个NEC患儿进行单病例的微生物组成PCoA分析，并发现其各自肠道微生物定植随着出生后时间推移的显著模式（图，ANOSIM (A) r = 0.26, p = 0.01, (B) r = 1.00, p = 0.035, (C) r = 0.610, p = 0.014, (D) r = 0.09, p = 0.008）。
 
 
 
